logs/dag_id=people/run_id=manual__2023-11-03T184033.267004+0000/task_id=create_people_table/attempt=1.log
[2023-11-03T18:40:34.945+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T18:40:33.267004+00:00 [queued]>
[2023-11-03T18:40:34.968+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T18:40:33.267004+00:00 [queued]>
[2023-11-03T18:40:34.968+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T18:40:34.969+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-03T18:40:34.970+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T18:40:34.996+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_people_table> on 2023-11-03 18:40:33.267004+00:00
[2023-11-03T18:40:35.005+0000] {standard_task_runner.py:55} INFO - Started process 1818 to run task
[2023-11-03T18:40:35.007+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people', 'create_people_table', 'manual__2023-11-03T18:40:33.267004+00:00', '--job-id', '125', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmpnij15xt_']
[2023-11-03T18:40:35.012+0000] {standard_task_runner.py:83} INFO - Job 125: Subtask create_people_table
[2023-11-03T18:40:35.092+0000] {task_command.py:376} INFO - Running <TaskInstance: people.create_people_table manual__2023-11-03T18:40:33.267004+00:00 [running]> on host 6b65bc8eaea5
[2023-11-03T18:40:35.178+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people
AIRFLOW_CTX_TASK_ID=create_people_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-03T18:40:33.267004+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-03T18:40:33.267004+00:00
[2023-11-03T18:40:35.189+0000] {base.py:71} INFO - Using connection ID 'postgres_people' for task execution.
[2023-11-03T18:40:35.195+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS people (
            Index INT NOT NULL primary key,
            User_Id varchar(100),
            First_Name varchar(100),
            
        );
    , parameters: None
[2023-11-03T18:40:35.197+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 7:         );
                ^

[2023-11-03T18:40:35.205+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people, task_id=create_people_table, execution_date=20231103T184033, start_date=20231103T184034, end_date=20231103T184035
[2023-11-03T18:40:35.219+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 125 for task create_people_table (syntax error at or near ")"
LINE 7:         );
                ^
; 1818)
[2023-11-03T18:40:35.260+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-03T18:40:35.298+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
